--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion</title>
-    <script defer type="module" src="dist/app.js"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <script defer type="module" src="./dist/app.js"></script>
 </head>
 <body>
     <div class="app">
         <header class="banner">
-            <h1 class="title">Motion</h1>
+            <h1 class="banner_title">Motion</h1>
             <ul class="btn-container">
-                <li><button class="btn image_btn">Image</button></li>
-                <li><button class="btn video_btn">Video</button></li>
-                <li><button class="btn note_btn">Note</button></li>
-                <li><button class="btn todo_btn">Todo</button></li>
+                <li><button class="create-btn" id="image_btn">Image</button></li>
+                <li><button class="create-btn" id="video_btn">Video</button></li>
+                <li><button class="create-btn" id="note_btn">Note</button></li>
+                <li><button class="create-btn" id="todo_btn">Todo</button></li>
             </ul>
         </header>
         <main class="document"></main>
         <footer class="footer">
-            <p class="footer_copyright">© Copyright by MJ. All rights reserved.</p>
+            <p class="footer_copyright">©Copyright by MJ. All rights reserved.</p>
         </footer>
     </div>
 </body>
 </html>
+
