--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Motion</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <script defer type="module" src="./dist/app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="app">
-        <header class="banner">
-            <h1 class="banner_title">Motion</h1>
-            <ul class="btn-container">
-                <li><button class="create-btn" id="image_btn">Image</button></li>
-                <li><button class="create-btn" id="video_btn">Video</button></li>
-                <li><button class="create-btn" id="note_btn">Note</button></li>
-                <li><button class="create-btn" id="todo_btn">Todo</button></li>
-            </ul>
-        </header>
-        <main class="document"></main>
-        <footer class="footer">
-            <p class="footer_copyright">©Copyright by MJ. All rights reserved.</p>
-        </footer>
+      <header class="banner">
+        <h1 class="banner_title">Motion</h1>
+        <ul class="btn-container">
+          <li><button class="create-btn" id="image_btn">Image</button></li>
+          <li><button class="create-btn" id="video_btn">Video</button></li>
+          <li><button class="create-btn" id="note_btn">Note</button></li>
+          <li><button class="create-btn" id="todo_btn">Todo</button></li>
+        </ul>
+      </header>
+      <main class="document"></main>
+      <footer class="footer">
+        <p class="footer_copyright">©Copyright by MJ. All rights reserved.</p>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
 
