--- a/index.html
+++ b/index.html
@@ -26,4 +26,10 @@
     </div>
   </body>
 </html>
+<li class="page-item">
+  <section class="page-item_body"></section>
+  <div class="page-item_controls">
+    <button class="close">&times;</button>
+  </div>
+</li>
 
